--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -1,4 +1,23 @@
+@import 'partials/general/variables';
 @import 'partials/general/colors';
 @import 'partials/general/global';
 @import 'partials/navigation';
+@import 'partials/grid';
 @import 'partials/welcome';
+
+@media screen and (min-width: $max-mobile-xs-width) and (max-width: $max-site-width) {
+  .center {
+    margin: auto;
+    max-width: $max-site-width - $tablet-margin !important;
+    width: calc(100% - #{ $tablet-margin }) !important;
+  }
+}
+
+@media screen and (max-width: $max-mobile-xs-width) {
+  .center {
+    margin-left: $mobile-xs-margin-total / 2 !important;
+    margin-right: $mobile-xs-margin-total / 2 !important;
+    max-width: $max-mobile-xs-width - $mobile-xs-margin-total !important;
+    width: calc(100% - #{$mobile-xs-margin-total}) !important;
+  }
+}
