--- a/assets/stylesheets/scss/partials/_grid.scss
+++ b/assets/stylesheets/scss/partials/_grid.scss
@@ -4,7 +4,7 @@
 
   .header {
     color: $gun-metal;
-    font-family: Ubuntu;
+    font-family: $ubuntu;
     font-size: 16px;
     font-weight: 300;
     margin: 0 auto 32px;
