--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -1,11 +1,38 @@
 @font-face {
-  font-family: 'ubuntu';
-  font-weight: 100;
+  font-family: 'Ubuntu-Light';
   font-style: normal;
-  src: url("../fonts/ubuntu-l-webfont.eot");
-  /* IE9 Compat Modes */
-  src: url("../fonts/ubuntu-l-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/ubuntu-l-webfont.woff2") format("woff2"), url("../fonts/ubuntu-l-webfont.woff") format("woff"), url("../fonts/ubuntu-l-webfont.ttf") format("truetype"), url("../fonts/ubuntu-l-webfont.svg#svgFontName") format("svg");
-  /* Legacy iOS */
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-light.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-light.woff") format("woff"), url("../fonts/ubuntu/ubuntu-light.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-light.svg#ubuntulight") format("svg");
+}
+@font-face {
+  font-family: 'Ubuntu-Light-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-lightitalic.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-lightitalic.woff") format("woff"), url("../fonts/ubuntu/ubuntu-lightitalic.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-lightitalic.svg#ubuntulight_italic") format("svg");
+}
+@font-face {
+  font-family: 'Ubuntu-Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-medium.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-medium.woff") format("woff"), url("../fonts/ubuntu/ubuntu-medium.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-medium.svg#ubuntumedium") format("svg");
+}
+@font-face {
+  font-family: 'Ubuntu-Medium-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-mediumitalic.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-mediumitalic.woff") format("woff"), url("../fonts/ubuntu/ubuntu-mediumitalic.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-mediumitalic.svg#ubuntumedium_italic") format("svg");
+}
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-regular.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-regular.woff") format("woff"), url("../fonts/ubuntu/ubuntu-regular.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-regular.svg#ubunturegular") format("svg");
+}
+@font-face {
+  font-family: 'Ubuntu-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url("../fonts/ubuntu/ubuntu-italic.woff2") format("woff2"), url("../fonts/ubuntu/ubuntu-italic.woff") format("woff"), url("../fonts/ubuntu/ubuntu-italic.ttf") format("truetype"), url("../fonts/ubuntu/ubuntu-italic.svg#ubuntuitalic") format("svg");
 }
 /* line 1, scss/partials/general/_global.scss */
 body {
