--- a/assets/stylesheets/scss/partials/_navigation.scss
+++ b/assets/stylesheets/scss/partials/_navigation.scss
@@ -2,7 +2,7 @@ nav {
   background-color: $white;
   border-bottom: 2px solid $alto-gray;
   display: flex;
-  font-family: Ubuntu;
+  font-family: $ubuntu;
   font-weight: 300;
   height: 50px;
   position: fixed;
