--- a/assets/stylesheets/scss/partials/general/_fonts.scss
+++ b/assets/stylesheets/scss/partials/general/_fonts.scss
@@ -1,11 +1,59 @@
 @font-face {
-  font-family: 'ubuntu';
-  font-weight: 100;
+  font-family: 'Ubuntu-Light';
   font-style: normal;
-  src: url("#{$font-path}/ubuntu-l-webfont.eot"); /* IE9 Compat Modes */
-  src: url("#{$font-path}/ubuntu-l-webfont.eot?#iefix") format('embedded-opentype'), /* IE6-IE8 */
-       url("#{$font-path}/ubuntu-l-webfont.woff2") format('woff2'), /* Super Modern Browsers */
-       url("#{$font-path}/ubuntu-l-webfont.woff") format('woff'), /* Pretty Modern Browsers */
-       url("#{$font-path}/ubuntu-l-webfont.ttf")  format('truetype'), /* Safari, Android, iOS */
-       url("#{$font-path}/ubuntu-l-webfont.svg#svgFontName") format('svg'); /* Legacy iOS */
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-light.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-light.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-light.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-light.svg#ubuntulight') format('svg');
+}
+
+@font-face {
+  font-family: 'Ubuntu-Light-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-lightitalic.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-lightitalic.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-lightitalic.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-lightitalic.svg#ubuntulight_italic') format('svg');
+}
+
+@font-face {
+  font-family: 'Ubuntu-Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-medium.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-medium.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-medium.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-medium.svg#ubuntumedium') format('svg');
+}
+
+@font-face {
+  font-family: 'Ubuntu-Medium-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-mediumitalic.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-mediumitalic.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-mediumitalic.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-mediumitalic.svg#ubuntumedium_italic') format('svg');
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  font-style: normal;
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-regular.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-regular.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-regular.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-regular.svg#ubunturegular') format('svg');
+}
+
+@font-face {
+  font-family: 'Ubuntu-Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: url('#{$ubuntu-font-path}/ubuntu-italic.woff2') format('woff2'),
+    url('#{$ubuntu-font-path}/ubuntu-italic.woff') format('woff'),
+    url('#{$ubuntu-font-path}/ubuntu-italic.ttf') format('truetype'),
+    url('#{$ubuntu-font-path}/ubuntu-italic.svg#ubuntuitalic') format('svg');
 }
