--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -388,6 +388,7 @@ nav li a:hover::after {
 .footer .question .mark {
   -webkit-animation: wobble 2s linear infinite;
           animation: wobble 2s linear infinite;
+  display: inline-block;
   font-size: 20px;
 }
 
