--- a/assets/stylesheets/scss/partials/general/_variables.scss
+++ b/assets/stylesheets/scss/partials/general/_variables.scss
@@ -21,3 +21,15 @@ $max-mobile-xs-width: 480px;
 $tablet-margin: 100px;
 $mobile-margin-total: 60px;
 $mobile-xs-margin-total: 50px;
+
+// Project circle colors
+$circle-colors: (
+  'red': #e94f37,
+  'orange': #ea7317,
+  'yellow': #f4e04d,
+  'green': #b4d7b2,
+  'blue': #4a90e2,
+  'purple': #5941a9,
+  'violet': #b19cd9,
+  'gray': #7a7677
+);
