--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -1,5 +1,6 @@
 @import 'partials/general/variables';
 @import 'partials/general/colors';
+@import 'partials/general/mixins';
 @import 'partials/general/animations';
 @import 'partials/general/fonts';
 @import 'partials/general/global';
