--- a/assets/stylesheets/scss/partials/general/_animations.scss
+++ b/assets/stylesheets/scss/partials/general/_animations.scss
@@ -20,3 +20,58 @@
     transform: rotate(-15deg);
   }
 }
+
+// bounce animation
+@keyframes z-bounce {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(.8);
+  }
+
+  50% {
+    transform: scale(.7);
+  }
+
+  75% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes z-bounce-back {
+  0% {
+    transform: scale(1);
+  }
+
+  25% {
+    transform: scale(1.1);
+  }
+
+  50% {
+    transform: scale(.7);
+  }
+
+  75% {
+    transform: scale(.8);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: 0;
+  }
+}
