--- a/assets/stylesheets/scss/partials/general/_variables.scss
+++ b/assets/stylesheets/scss/partials/general/_variables.scss
@@ -24,7 +24,7 @@ $mobile-xs-margin-total: 50px;
 
 // Project circle colors
 $circle-colors: (
-  'red': #e94f37,
+  'red': #ff6961,
   'orange': #ea7317,
   'yellow': #f4e04d,
   'green': #b4d7b2,
