--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -189,8 +189,29 @@ body {
   text-align: center;
 }
 
-/* line 1, scss/partials/_navigation.scss */
+@-webkit-keyframes nav-drop-in {
+  from {
+    top: -50px;
+  }
+  to {
+    top: 0;
+  }
+}
+
+@keyframes nav-drop-in {
+  from {
+    top: -50px;
+  }
+  to {
+    top: 0;
+  }
+}
+/* line 11, scss/partials/_navigation.scss */
 nav {
+  -webkit-animation: nav-drop-in .2s linear forwards;
+          animation: nav-drop-in .2s linear forwards;
+  -webkit-animation-delay: .4s;
+          animation-delay: .4s;
   background-color: #fff;
   border-bottom: 2px solid #dadada;
   display: -webkit-box;
@@ -200,10 +221,13 @@ nav {
   font-weight: 300;
   height: 50px;
   position: fixed;
+  top: -50px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
   width: 100%;
   z-index: 1000;
 }
-/* line 12, scss/partials/_navigation.scss */
+/* line 26, scss/partials/_navigation.scss */
 nav ul {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -212,12 +236,12 @@ nav ul {
   margin: 0;
   padding: 0;
 }
-/* line 20, scss/partials/_navigation.scss */
+/* line 34, scss/partials/_navigation.scss */
 nav li {
   float: left;
   line-height: 50px;
 }
-/* line 24, scss/partials/_navigation.scss */
+/* line 38, scss/partials/_navigation.scss */
 nav li img {
   border: 1px solid #4a90e2;
   border-radius: 100px;
@@ -225,7 +249,7 @@ nav li img {
   margin: auto;
   width: 25px;
 }
-/* line 32, scss/partials/_navigation.scss */
+/* line 46, scss/partials/_navigation.scss */
 nav li a {
   color: inherit;
   padding: 16px;
@@ -233,7 +257,7 @@ nav li a {
   text-align: center;
   text-decoration: none;
 }
-/* line 40, scss/partials/_navigation.scss */
+/* line 54, scss/partials/_navigation.scss */
 nav li.bogdan {
   -ms-flex-line-pack: center;
       align-content: center;
@@ -250,17 +274,17 @@ nav li.bogdan {
   transition: width 1.75s ease-in-out;
   width: 28px;
 }
-/* line 52, scss/partials/_navigation.scss */
+/* line 66, scss/partials/_navigation.scss */
 nav li.bogdan:hover {
   width: 100%;
 }
-/* line 56, scss/partials/_navigation.scss */
+/* line 70, scss/partials/_navigation.scss */
 nav li span {
   height: 28px;
   line-height: 28px;
   margin: auto auto auto 16px;
 }
-/* line 63, scss/partials/_navigation.scss */
+/* line 77, scss/partials/_navigation.scss */
 li nav.bogdan,
 nav li a::after {
   background-color: #4a90e2;
@@ -274,7 +298,7 @@ nav li a::after {
   transition: opacity .3s linear;
   width: 100%;
 }
-/* line 78, scss/partials/_navigation.scss */
+/* line 92, scss/partials/_navigation.scss */
 li nav.bogdan:hover::after,
 nav li a:hover::after {
   opacity: 1;
