--- a/assets/stylesheets/scss/partials/general/_variables.scss
+++ b/assets/stylesheets/scss/partials/general/_variables.scss
@@ -25,7 +25,7 @@ $mobile-xs-margin-total: 50px;
 // Project circle colors
 $circle-colors: (
   'red': #ff6961,
-  'orange': #ea7317,
+  'orange': #ffb347,
   'yellow': #f4e04d,
   'green': #b4d7b2,
   'blue': #4a90e2,
