--- a/assets/stylesheets/scss/partials/general/_mixins.scss
+++ b/assets/stylesheets/scss/partials/general/_mixins.scss
@@ -26,8 +26,17 @@
 
   @each $color, $value in $circle-colors {
     &[data-color=#{$color}] {
-      border-color: rgba($value, .5);
+      border-color: rgba($value, .75);
 
+    }
+  }
+}
+
+@mixin project-link {
+
+  @each $color, $value in $circle-colors {
+    &[data-color=#{$color}]:hover svg {
+      fill: rgba($value, 1);
     }
   }
 }
