Contact Me Modal

--- a/assets/stylesheets/scss/app.scss
+++ b/assets/stylesheets/scss/app.scss
@@ -4,6 +4,7 @@
 @import 'partials/general/animations';
 @import 'partials/general/fonts';
 @import 'partials/general/global';
+@import 'partials/modal';
 @import 'partials/navigation';
 @import 'partials/grid';
 @import 'partials/welcome';
