--- a/assets/stylesheets/scss/partials/general/_global.scss
+++ b/assets/stylesheets/scss/partials/general/_global.scss
@@ -3,3 +3,23 @@ body {
   padding: 0;
   text-align: center;
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.right {
+  float: right;
+}
+
+.left {
+  float: left;
+}
+
+.no-scroll {
+  overflow: hidden;
+}
+
+.hidden {
+  display: none;
+}
