--- a/assets/stylesheets/scss/partials/general/_mixins.scss
+++ b/assets/stylesheets/scss/partials/general/_mixins.scss
@@ -40,3 +40,12 @@
     }
   }
 }
+
+@mixin transition($property: all, $duration: .2s) {
+  transition: $property $duration ease-in-out;
+}
+
+@mixin vertical-align($position: absolute, $transform: '') {
+  position: $position;  top: 50%;
+  transform: translateY(-50%) $transform;
+}
