--- a/assets/stylesheets/scss/partials/general/_variables.scss
+++ b/assets/stylesheets/scss/partials/general/_variables.scss
@@ -15,7 +15,9 @@ $max-grid-quad-width: 1180px;
 $max-tablet-width: 980px;
 $max-grid-tri-width: 910px;
 $max-mobile-width: 768px;
+$max-mobile-l-width: 720px;
 $max-mobile-med-width: 640px;
+$max-mobile-xs-width: 480px;
 $max-grid-duo-width: 640px;
 $max-mobile-xs-width: 480px;
 $tablet-margin: 100px;
