--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -189,6 +189,153 @@ body {
   text-align: center;
 }
 
+/* line 7, scss/partials/general/_global.scss */
+.no-scroll {
+  overflow: hidden;
+}
+
+/* line 11, scss/partials/general/_global.scss */
+.right {
+  float: right;
+}
+
+/* line 15, scss/partials/general/_global.scss */
+.left {
+  float: left;
+}
+
+/* line 19, scss/partials/general/_global.scss */
+.no-scroll {
+  overflow: hidden;
+}
+
+/* line 23, scss/partials/general/_global.scss */
+.hidden {
+  display: none;
+}
+
+/* line 1, scss/partials/_modal.scss */
+.modal {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  height: 100vh;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  z-index: 10000;
+}
+/* line 11, scss/partials/_modal.scss */
+.modal.modal-mask {
+  background-color: rgba(21, 39, 48, 0.4);
+  opacity: 0;
+  pointer-events: none;
+}
+/* line 17, scss/partials/_modal.scss */
+.modal.active {
+  opacity: 1;
+  pointer-events: all;
+}
+/* line 21, scss/partials/_modal.scss */
+.modal.active .content {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%) scale(1);
+          transform: translateY(-50%) scale(1);
+  opacity: 1;
+}
+/* line 28, scss/partials/_modal.scss */
+.modal .content {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%) scale(0.2);
+          transform: translateY(-50%) scale(0.2);
+  background: #f5f6f7;
+  border-radius: 5px;
+  box-shadow: 0 10px 20px 0 rgba(21, 39, 48, 0.2);
+  left: 0;
+  margin: auto;
+  max-width: 840px;
+  opacity: 0;
+  position: absolute;
+  right: 0;
+  width: 90%;
+  will-change: transform;
+}
+/* line 44, scss/partials/_modal.scss */
+.modal .content.small {
+  max-width: 340px;
+}
+/* line 1, scss/partials/modal/_header.scss */
+.modal .content .header {
+  box-sizing: border-box;
+  color: #283c46;
+  padding: 35px 40px;
+  position: relative;
+  text-align: left;
+  width: 100%;
+}
+/* line 9, scss/partials/modal/_header.scss */
+.modal .content .header .title {
+  display: block;
+  font-family: Ubuntu;
+  font-size: 20px;
+  width: calc(100% - 22px);
+}
+/* line 16, scss/partials/modal/_header.scss */
+.modal .content .header .modal-toggle {
+  color: inherit;
+  font-size: 13px;
+  position: absolute;
+  right: 40px;
+  text-decoration: none;
+  top: 40px;
+}
+/* line 26, scss/partials/modal/_header.scss */
+.modal .content.small .header {
+  padding: 25px;
+}
+/* line 29, scss/partials/modal/_header.scss */
+.modal .content.small .header .modal-toggle {
+  right: 25px;
+  top: 25px;
+}
+@media screen and (max-width: 480px) {
+  /* line 36, scss/partials/modal/_header.scss */
+  .modal .content .header {
+    padding: 20px;
+  }
+  /* line 39, scss/partials/modal/_header.scss */
+  .modal .content .header .modal-toggle {
+    right: 20px;
+    top: 20px;
+  }
+}
+/* line 1, scss/partials/modal/_body.scss */
+.modal .content .body {
+  box-sizing: border-box;
+  color: #283c46;
+  padding: 0 40px 40px;
+}
+/* line 8, scss/partials/modal/_body.scss */
+.modal .content.small .body {
+  font-size: 14px;
+  line-height: 1.5;
+  padding: 0 25px 25px;
+}
+/* line 14, scss/partials/modal/_body.scss */
+.modal .content.small .form-group:last-child {
+  padding-top: 25px;
+}
+@media screen and (max-width: 480px) {
+  /* line 20, scss/partials/modal/_body.scss */
+  .modal .content .body {
+    padding: 0 20px 20px;
+  }
+}
+
 @-webkit-keyframes nav-drop-in {
   from {
     top: -50px;
@@ -740,7 +887,7 @@ nav li a:hover::after {
 }
 
 @media screen and (min-width: 480px) and (max-width: 1440px) {
-  /* line 12, scss/app.scss */
+  /* line 13, scss/app.scss */
   .center {
     margin: auto;
     max-width: 1340px !important;
@@ -748,7 +895,7 @@ nav li a:hover::after {
   }
 }
 @media screen and (max-width: 480px) {
-  /* line 20, scss/app.scss */
+  /* line 21, scss/app.scss */
   .center {
     margin-left: 25px !important;
     margin-right: 25px !important;
